make email cc address configurable

--- a/src/AzureVMGenerator/Web.config
+++ b/src/AzureVMGenerator/Web.config
@@ -6,6 +6,7 @@
 <configuration>
   <appSettings>
     <add key="AzureStorageConnectionString" value="ADD_STORAGE_ACCOUNT_CONNECTION_STRING_TO_AZURE_FUNCTION_QUEUE_HERE"/>
+    <add key="emailCcAddress" value="EMAIL_ADDRESS_WHICH_ALWAYS_IS_KEPT_IN_CC"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
